fixing things that are deprecated in later versions