@@ -6,7 +6,7 @@ package com.github.sellersj.artifactchecker;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
@@ -22,8 +22,7 @@ import com.github.sellersj.artifactchecker.model.App;
 public class AppFileParser {
 
     public List<App> parseAppFile(String url) {
-
-        try (InputStream in = new URL(url).openStream()) {
+        try (InputStream in = URI.create(url).toURL().openStream()) {
             String contents = IOUtils.toString(in, StandardCharsets.UTF_8);
             return parseAppContents(contents);
         } catch (Exception e) {
